# persp_cube2

./: AUTHORS  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
include/: mesh3d.h  msg_box.h  ply.h  scene3d.h  stack.h  vtypes.h
mfiles/: cube.m  escher_turtles.m
src/: Makefile.am  Makefile.in  clip_line.c  main.c  mesh3d.c  mesh3d_load_m.c  mesh3d_load_m.l  mesh3d_load_obj.c  mesh3d_load_obj.l  msg_box.c  ply.c  scene3d.c  vtypes.c
